Fix heading alignment on Activities Report
Addresses issue #619

--- a/bonfire/themes/admin/screen.css
+++ b/bonfire/themes/admin/screen.css
@@ -371,7 +371,7 @@ Grids
 	font-size: 16px;
 	text-shadow: 0px 1px 2px rgba(0,0,0,0.8);
 	padding: 0 10px;
-	margin: 0px inherit;
+	margin: 0;
 	-webkit-border-top-left-radius: 5px;
 	-webkit-border-top-right-radius: 5px;
 	-moz-border-radius-topleft: 5px;
